[tool.poetry]
name = "minedojo-boi"
version = "0.1.0"
description = ""
authors = ["Dragonlord1005 <68302450+Dragonlord1005@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "minedojo_boi"}]

[tool.poetry.dependencies]
python = "^3.9"
minedojo = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
